--- a/src/app/personaldetails/personaldetails.component.html
+++ b/src/app/personaldetails/personaldetails.component.html
@@ -8,16 +8,14 @@
             <div class="unit">
                 <label for="jobTitle">Job Title</label><br>
                     <input type="text" class="form-control" 
-                    id="jobTitle" ngModel name="jobTitle" 
-                    #jobTitle="ngModel">
+                    id="jobTitle" formControlName = "jobTitle">
             </div>
         </div>
 
         <div class = "unit">
-            <label for="jobTitle">Photo</label><br>
+            <label for="Photo">Photo</label><br>
                 <input type="file" class="" 
-                id="jobTitle" ngModel name="jobTitle" 
-                #jobTitle="ngModel">
+                formControlName = "photo">
         </div>
 
 
@@ -25,14 +23,12 @@
             <div class="unit">
                 <label for="firstname">First Name</label><br>
                     <input type="text" class="form-control" 
-                    id="firstname" ngModel name="firstname" 
-                    #firstname="ngModel">
+                    formControlName = "firstName">
             </div>
             <div class="unit">
                 <label for="lastname">Last Name</label><br>
                     <input type="text" class="form-control" 
-                    id="lastname" ngModel name="lastname" 
-                    #jobTitle="ngModel">
+                    formControlName = "lastName">
             </div>
         </div>
 
@@ -40,14 +36,12 @@
             <div class = "unit">
                 <label for="email">Email</label><br>
                     <input type="email" class="form-control" 
-                    id="email" ngModel name="email" 
-                    #email="ngModel">
+                    formControlName = "email">
             </div>
             <div class="unit">
                 <label for="phone">Phone</label><br>
                     <input type="number" class="form-control" 
-                    id="phone" ngModel name="phone" 
-                    #phone="ngModel">
+                    formControlName = "phone">
             </div>
         </div>
 
@@ -55,14 +49,12 @@
             <div class="unit">
                 <label for="country">Country</label><br>
                     <input type="text" class="form-control" 
-                    id="country" ngModel name="country" 
-                    #country="ngModel">
+                    formControlName = "country">
             </div>
             <div class="unit">
                 <label for="city">City</label><br>
                     <input type="text" class="form-control" 
-                    id="city" ngModel name="city" 
-                    #city="ngModel">
+                    formControlName = "city">
             </div>
             </div>
 
@@ -73,14 +65,12 @@
             <div class = "unit">
                     <label for="address">Address</label><br>
                         <input type="text" class="form-control" 
-                        id="address" ngModel name="address" 
-                        #address="ngModel">
+                        formControlName = "address">
                  </div>
                  <div class = "unit">
                     <label for="postalcode">Postal Code</label><br>
                         <input type="number" class="form-control" 
-                        id="postalcode" ngModel name="postalcode" 
-                        #postalcode = "ngModel">
+                        formControlName = "postalCode">
                  </div>
             </div>
 
@@ -88,14 +78,12 @@
                  <div class = "unit">
                     <label for="nationality">Nationality</label><br>
                         <input type="text" class="form-control" 
-                        id="nationality" ngModel name="nationality" 
-                        #nationality="ngModel">
+                        formControlName = "nationality">
                  </div>
                  <div class = "unit">
                     <label for="pob">Place of birth</label><br>
                         <input type="text" class="form-control" 
-                        id="pob" ngModel name="pob" 
-                        #pob="ngModel">
+                        formControlName = "pob">
                  </div>
                  </div>
 
@@ -103,8 +91,7 @@
                  <div class = "unit">
                     <label for="dob">Data of birth</label><br>
                         <input type="date" class="form-control" 
-                        id="dob" ngModel name="dob" 
-                        #dob="ngModel">
+                        formControlName = "date">
                  </div>
                  </div>
             </div>
