added new changes - added a new component 'educations' - binded the new component and some existing ones to the preview

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
             <app-personaldetails></app-personaldetails>
             <app-personal-summary></app-personal-summary>
             <app-experience></app-experience>
+            <app-education></app-education>
             <app-website-links></app-website-links>
             <app-references *ngIf="referencesSection()"></app-references>
             <app-extra-curricular-activities *ngIf="extraCurricularActivitiesSection()"></app-extra-curricular-activities>
