added new changes - added new components skills - renovated website-and-social-links component - bounded all new changes to the preview template

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,8 @@
             <app-personal-summary></app-personal-summary>
             <app-experience></app-experience>
             <app-education></app-education>
-            <app-website-links></app-website-links>
+            <app-website-and-social-links></app-website-and-social-links>
+            <app-skills></app-skills>
             <app-references *ngIf="referencesSection()"></app-references>
             <app-extra-curricular-activities *ngIf="extraCurricularActivitiesSection()"></app-extra-curricular-activities>
             <app-add-sections></app-add-sections>
