--- a/src/app/education/education.component.html
+++ b/src/app/education/education.component.html
@@ -1,4 +1,5 @@
 <h4>Educations</h4>
+<p>A varied education on your resume sums up the value that your learnings and background will bring to job.</p>
 <div>
     <form [formGroup]="educationsForm">
         <div formArrayName="educations">
