--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -1,4 +1,5 @@
 <h4>Experiences</h4>
+<p>Show your relevant experience (last 10 years). Use bullet points to note your achievements, if possible - use numbers/facts (Achieved X, measured by Y, by doing Z).</p>
 <div>
     <form [formGroup]="experiencesForm">
         <div formArrayName="experiences">
