--- a/src/app/personaldetails/personaldetails.component.html
+++ b/src/app/personaldetails/personaldetails.component.html
@@ -11,13 +11,14 @@
                     id="jobTitle" formControlName = "jobTitle">
             </div>
         </div>
-
+    
+    <div class = "personal-row">
         <div class = "unit">
             <label for="Photo">Photo</label><br>
                 <input type="file" class="" 
                 formControlName = "photo">
         </div>
-
+    </div>
 
         <div class="personal-row">
             <div class="unit">
