--- a/src/app/personal-summary/personal-summary.component.css
+++ b/src/app/personal-summary/personal-summary.component.css
@@ -3,7 +3,35 @@ overflow: hidden;
 animation:smooth;
 animation-duration: 0.75s;
 }
+
+.personal-space{
+    background-color: rgb(239, 242, 249);
+}
+
+.summary-title{
+    margin-bottom: 1rem;
+}
+
+.ai-section{
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+
+.ai-summery{
+    width: 100%;
+}
+
+.choice-header{
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+.ai-choice {
+    background-color: aliceblue;
+    z-index: -1;
+}
+
+
 @keyframes smooth{
-    0% {height: 0rem; ;opacity: 1%;}
-    100% {height:10rem ;opacity: 100%;}
+    0% {opacity: 1%;}
+    100% {opacity: 100%;}
 }
