--- a/src/app/personal-summary/personal-summary.component.html
+++ b/src/app/personal-summary/personal-summary.component.html
@@ -1,18 +1,21 @@
     <div class = "personal-summary">
         <div class = "summary-title">
-            <h4>Personal Summary</h4>
+            <h4 class = "personal-summary-header">Personal Summary</h4>
+        </div>
+        <div class = "section-description">
+            <p>Write 2-4 short & energetic sentences to interest the reader! Mention your role, experience & most importantly - your biggest achievements, best qualities and skills.</p>
         </div>
 
     <div class = "summary-box">
         <form >
-        <textarea class = "form-control"  
+        <textarea class = "personal-space form-control"  
          rows="5" cols="48"></textarea>
         </form>
 
         <div class="ai-section">
             <button class="ai-summery btn btn-outline-primary" (click)="displayAiChoices()">AI Summary</button>
             <div class="ai-return" *ngIf = "aiChoicesExpand">
-                <h5>AI Choices</h5>
+                <h5 class="choice-header">AI Choices</h5>
                   <form class = 'ai-choices' >
                     <div class = 'ai-choice alert alert-primary'   *ngFor = "let aiText of aiSummary">
                         <input  class = 'ai-selected ' 
