--- a/src/app/personaldetails/personaldetails.component.css
+++ b/src/app/personaldetails/personaldetails.component.css
@@ -1,30 +1,30 @@
 .unit{
   color:rgb(130, 139, 162) ;
-
-
+  width:45%;
 }  
-.personal-extension{
-    animation-name: smooth;
-    animation-duration: 0.75s;
+input{
+  background-color: rgb(239, 242, 249);
+  height: calc(2.25em + 0.75rem + 2px); 
 }
+
 .personal-row{
 
    display: flex;
-   justify-content: flex-start;
-}
-input{
-  background-color: rgb(239, 242, 249);
+   justify-content: space-between;
 }
 
-
-  @keyframes smooth {
-    0% {height: 0rem; ;opacity: 1%;}
-    100% {height: 15rem ;opacity: 100%;}
-  }
+.add{
+  width:100%;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
 
   @media (max-width: 550px) {
      .personal-row{
       flex-direction: column;
+    }
+    .unit {
+      width:auto;
     }
 
   }
