--- a/src/app/personaldetails/personaldetails.component.html
+++ b/src/app/personaldetails/personaldetails.component.html
@@ -59,7 +59,6 @@
             </div>
             </div>
 
-
            <div class = "personal-extension" *ngIf ='expand'>
                 
             <div class = "personal-row">
@@ -92,7 +91,7 @@
                  <div class = "unit">
                     <label for="dob">Data of birth</label><br>
                         <input type="date" class="form-control" 
-                        formControlName = "date">
+                        formControlName = "dob">
                  </div>
                  </div>
             </div>
