--- a/src/app/website-links/website-links.component.css
+++ b/src/app/website-links/website-links.component.css
@@ -1,13 +1,23 @@
-.card {
-    width: 30%;
-    /* margin-top: 1rem;
-    margin-left: 1rem;
-    padding: 2rem; */
-}
-
-.card-body {
-    padding: 1rem;
+.unit{
+    width:45%;
+  } 
+  
+.input-row{
     display: flex;
-    flex-direction: column;
     justify-content: space-between;
-}
+ }
+
+ input{
+    background-color: rgb(239, 242, 249);
+    height: calc(2.25em + 0.75rem + 2px);
+  }
+
+  @media (max-width: 550px) {
+    .input-row{
+     flex-direction: column;
+   }
+   
+   .unit {
+     width:auto;
+   }
+ }
