--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
-
-
-.add-experience, .personal-extension{
+w
+.add-experience, .personal-extension, .add-links, .add-reference{
     animation-name: smooth;
     animation-duration: 0.75s;
 }
