--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,9 +5,15 @@
             <app-personaldetails></app-personaldetails>
             <app-personal-summary></app-personal-summary>
             <app-experience></app-experience>
+            <app-education></app-education>
             <app-website-links></app-website-links>
+            <app-hobbies *ngIf="hobbiesSection()"></app-hobbies>
+            <app-languages *ngIf="languagesSection()"></app-languages>
+            <app-internships *ngIf="internshipsSection()"></app-internships>
             <app-references *ngIf="referencesSection()"></app-references>
+            <app-courses *ngIf="coursesSection()"></app-courses>
             <app-extra-curricular-activities *ngIf="extraCurricularActivitiesSection()"></app-extra-curricular-activities>
+            <app-custom-section *ngIf="customSection()"></app-custom-section>
             <app-add-sections></app-add-sections>
         </div>
     </div>
@@ -15,7 +21,6 @@
     <div class="right-segment">
         <div class="main-preview-window">
                 <app-plain-template></app-plain-template>
-                <!-- <app-preview-display></app-preview-display> -->
             </div>
         </div>
     </div>
