--- a/src/app/website-links/website-links.component.html
+++ b/src/app/website-links/website-links.component.html
@@ -1,4 +1,5 @@
 <h4>Websites & Social Links</h4>
+<p>You can add links to websites you want hiring managers to see! Perhaps It will be  a link to your portfolio, LinkedIn profile, or personal website</p>
 <div >
     <form [formGroup]="linkForm">
         <div formArrayName="links">
