--- a/src/app/languages/languages.component.css
+++ b/src/app/languages/languages.component.css
@@ -2,27 +2,22 @@
     width:45%;
   } 
   
-  .personal-row{
+.input-row{
     display: flex;
     justify-content: space-between;
-  }
-  
-  input{
+ }
+
+ input{
     background-color: rgb(239, 242, 249);
     height: calc(2.25em + 0.75rem + 2px);
   }
-  
-  #experienceDescription{
-    background-color: rgb(239, 242, 249);
-  }
-  
+
   @media (max-width: 550px) {
-    .personal-row{
+    .input-row{
      flex-direction: column;
    }
+   
    .unit {
      width:auto;
    }
-  
-  }
-  
+ }
