added the skills component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,7 @@
             <app-personal-summary></app-personal-summary>
             <app-experience></app-experience>
             <app-education></app-education>
+            <app-skills></app-skills>
             <app-website-links></app-website-links>
             <app-hobbies *ngIf="hobbiesSection()"></app-hobbies>
             <app-languages *ngIf="languagesSection()"></app-languages>
