--- a/src/app/languages/languages.component.html
+++ b/src/app/languages/languages.component.html
@@ -2,31 +2,16 @@
 <div>
   <form [formGroup]="languagesForm">
     <div formArrayName="links">
-      <div
-        class="add-links"
-        *ngFor="let language of languages.controls; let i = index"
-        [formGroupName]="i"
-        class="language"
-      >
+      <div class="add-links" *ngFor="let language of languages.controls; let i = index" [formGroupName]="i"
+        class="language">
         <div class="input-row">
           <div class="unit">
             <label for="label">Language Name</label>
-            <input
-              class="form-control"
-              type="text"
-              id="label"
-              placeholder="Language"
-              formControlName="languageName"
-            />
+            <input class="form-control" type="text" id="label" placeholder="Language" formControlName="languageName" />
           </div>
           <div class="unit">
             <label for="proficiency">Proficiency Level</label>
-            <select
-              class="form-control form-selec"
-              id="proficiency"
-              formControlName="proficiency"
-              required
-            >
+            <select class="form-control form-selec" id="proficiency" formControlName="proficiency" required>
               <option selected value='"Native speaker"'>Native speaker</option>
               <option value='"Highly proficient"'>Highly proficient</option>
               <option value='"Very good command"'>Very good command</option>
@@ -44,20 +29,12 @@
           </div>
         </div>
 
-        <button
-          class="btn btn-outline-danger"
-          type="button"
-          (click)="removeLanguage(i)"
-        >
+        <button class="btn btn-outline-danger" type="button" (click)="removeLanguage(i)">
           Remove Language
         </button>
       </div>
     </div>
-    <button
-      class="btn btn-outline-primary"
-      type="button"
-      (click)="addLanguage()"
-    >
+    <button class="btn btn-outline-primary" type="button" (click)="addLanguage()">
       Add Language
     </button>
   </form>
